# cmr-cache

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  TODO.md  docker-compose.yml  main.cpp  main.h
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-and-release.yml  run-tests.yml
config/: connect.yaml  host.yaml
core/: core.h
core/cache/: cache.cpp  cache.h
core/entities/: config.h  user.h
core/manager/: manager.cpp  manager.h
core/socket/: socket.cpp  socket.h
tests/unit/: main.cpp  test_cache.cpp
